# 9.Cmake

my_first_cmake_project/: CMakeLists.txt
my_first_cmake_project/my_first_cmake_project/: CMakeLists.txt  my_first_cmake_project.cpp
second_CMake/: CMakeLists.txt
second_CMake/second_CMake/: CMakeLists.txt  Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.cpp  Figure.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rect.cpp  Rect.h  Rhombus.cpp  Rhombus.h  Right_triangle.cpp  Right_triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  second_CMake.cpp  second_CMake.h
